[gd_scene load_steps=3 format=3 uid="uid://durokclwboda6"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_dcjpj"]
[ext_resource type="Theme" uid="uid://dk3wsf2uf1qpg" path="res://scenes/theme.tres" id="2_i6onl"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_dcjpj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.215686)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_i6onl")
alignment = 1

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score:"

[node name="ScoreNumberLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "15000"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DefeatedLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Enemies Defeated:"

[node name="DefeatedNumberLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "300"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Try Again!"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
